--- a/feature/build.gradle
+++ b/feature/build.gradle
@@ -27,15 +27,23 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':base')
     implementation 'com.android.support:support-v4:26.1.0'
+
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
+
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+    compile 'com.skyfishjy.ripplebackground:library:1.0.1'
+    compile 'it.smasini:android-radar:1.0'
+    
     implementation project(':data')
     implementation project(':domain')
 }
