--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':feature', ':app', ':base', ':instantapp', ':domain', ':data', ':model'
+include ':feature', ':app', ':base', ':instantapp', ':domain', ':data', ':model', ':library', ':rippleview', ':randomtextview'
