All functions completed including file transfer facing issues with Android WiFi Direct GO

--- a/feature/src/main/AndroidManifest.xml
+++ b/feature/src/main/AndroidManifest.xml
@@ -70,6 +70,14 @@
                     android:scheme="https" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name="data.musta.it.apiit.com.repository.connection.transfer.FileTransferService"
+            android:enabled="true" />
+        <service
+            android:name="data.musta.it.apiit.com.repository.connection.transfer.WiFiClientIPTransferService"
+            android:enabled="true" />
+
     </application>
 
 </manifest>
