--- a/data/build.gradle
+++ b/data/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.scottyab:secure-preferences-lib:0.1.4'
     implementation project(':domain')
 }
