--- a/feature/build.gradle
+++ b/feature/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     compile 'it.smasini:android-radar:1.0'
     compile 'com.mindvalley.android:hexagonrecyclerview:1.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.wang.avi:library:2.1.3'
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
     implementation project(':data')
     implementation project(':domain')
     implementation project(':library')
